tests/test_enum/bad/quick_pattern_fail.catala_en
## Article

```catala
declaration enumeration E:
  -- Case1 content integer
  -- Case2

declaration scope A:
  context x content E
  context y content boolean
  context z content boolean

scope A:
  definition x equals Case1 content 2
  definition y equals x with pattern Case3
```

```catala-test-inline
$ catala Interpret -s A
[ERROR]
The name of this constructor has not been defined before
(it's probably a typographical error).

Here is your code :
┌─⯈ quick_pattern_fail.catala_en:15.38-15.43:
└──┐
15 │   definition y equals x with pattern Case3
   │                                      ‾‾‾‾‾
   └─ Article

Maybe you wanted to write : "Case1",
or "Case2"
#return code 123#
```
